# Sokoban

./: .gitignore  Makefile  README.md  meson.build
assets/boards/: board1.json
resources/: board.schema.json
src/: board.cc  board.hh  board_validator.cc  board_validator.hh  main.cc
